flexsdk/modules/asc/test/compiler/as3/Definitions/Packages/PackageDefInterfaceErr.err

[Compiler] Error #1083: Syntax error: package is unexpected.
as3.Definitions.Packages.PackageDefInterfaceErr.as, Ln 24, Col 1:
package foo {}
^

1 error found
